# Multi_disease_prediction_ML

./: README.md
Flask_deployemet/: Multi-disease-prediction (1).ipynb  app.py  pyproject.toml
Flask_deployemet/models/: ckd_KNN_model.pkl  ckd_LogisticRegression_model.pkl  ckd_Random_model.pkl  ckd_svm_model.pkl  ckd_tree_model.pkl  dia_KNN_model.pkl  dia_LogisticRegression_model.pkl  dia_RandomForest_model.pkl  dia_svm_model.pkl  dia_tree_model.pkl  heart_KNN_model.pkl  heart_LogisticRegression_model.pkl  heart_Random_model.pkl  heart_svm_model.pkl  heart_tree_model.pkl  str_KNN_model.pkl  str_LogisticRegression_model.pkl  str_svm_model.pkl  str_tree_model.pkl
Flask_deployemet/static/: ckd.css  diabetes.css  heart.css  index.css  result.css  stroke.css
Flask_deployemet/templates/: ckd.html  diabetes.html  heart.html  index.html  result.html  stroke.html
